# paw

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  heartbeat.md  heartbit.md  heatbit.md  paw.yaml.example  plan.md  pyproject.toml  soul.md
.github/workflows/: deploy-azure.yml
docs/: azure-deployment.md  plugin-development.md
infra/azure/: main.bicep
plugins/brave_search/: __init__.py  plugin.yaml
plugins/hello_world/: __init__.py  plugin.yaml
plugins/weatherplugin/: __init__.py  plugin.yaml
scripts/: azure-redeploy.ps1
src/paw/: __init__.py  config.py  logging.py  main.py
src/paw/agent/: conversation.py  loop.py  memory.py  soul.py  tools.py
src/paw/api/middleware/: auth.py
src/paw/api/routes/: channels.py  chat.py  conversations.py  health.py  memory.py  webhooks.py
src/paw/automation/: __init__.py  scheduler.py
src/paw/channels/: __init__.py  base.py  manager.py  router.py
src/paw/cli/: main.py
src/paw/coder/: engine.py
src/paw/db/: engine.py
src/paw/extensions/: base.py  loader.py
src/paw/gateway/: __init__.py  models.py  router.py  service.py
src/paw/llm/: gateway.py
src/paw/tools/: automation.py  files.py  shell.py
tests/: test_agent_tool_model_routing.py  test_automation_scheduler.py  test_channel_router.py  test_chat_model_selection.py  test_config_env_parsing.py  test_conversation_normalization.py  test_db_engine.py  test_markdown_memory.py  test_memory_tool.py  test_output_target_routing.py  test_security_hardening.py  test_telegram_config.py  test_telegram_model_switching.py
(+2 files in other folders)
